# laura-mvp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 20260610_0001_initial_schema.py  20260611_0002_studio_models_agents.py  20260611_0003_encrypted_provider_keys.py  20260611_0004_threads_messages.py
app/: main.py
app/api/: api_keys.py  deps.py  projects.py  studio.py  tasks.py  threads.py  users.py
app/core/: config.py  crypto.py
app/db/: session.py
app/mcp/: server.py
app/models/: __init__.py  domain.py
app/schemas/: __init__.py  domain.py
app/services/: api_keys.py  projects.py  studio.py  tasks.py  threads.py
app/static/: app.js  index.html  styles.css
desktop/: package-lock.json  package.json
desktop/src/: main.js  preload.js
desktop/src/renderer/: app.js  index.html  styles.css
scripts/: create_api_key.py  init_db.py  start_production.ps1
tests/: test_rest_and_mcp.py
