[project]
name = "laura-mvp"
version = "0.1.0"
description = "Agentic orchestration MVP with REST APIs and a remote MCP server."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.136.0",
  "uvicorn[standard]>=0.49.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.17.0",
  "psycopg[binary]>=3.3.0",
  "pydantic-settings>=2.14.0",
  "email-validator>=2.3.0",
  "python-dotenv>=1.2.0",
  "mcp[cli]>=1.27.0",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.0",
  "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
